# griffe-pydantic

./: .copier-answers.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  duties.py  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  search.json  sitemap.xml  zensical.toml
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
.github/workflows/: ci.yml  release.yml
changelog/: index.html
code_of_conduct/: index.html
config/: pytest.ini  ruff.toml
config/vscode/: launch.json
contributing/: index.html
coverage/: class_index.html  covindex.html  d_25bfe507819b372b_extension_py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_extension_py.html  function_index.html  index.html  status.json  z_25bfe507819b372b_common_py.html  z_25bfe507819b372b_debug_py.html  z_25bfe507819b372b_dynamic_py.html  z_25bfe507819b372b_extension_py.html  z_25bfe507819b372b_static_py.html  z_3f13394d4b8632b9___init___py.html  z_3f13394d4b8632b9_common_py.html  z_3f13394d4b8632b9_debug_py.html  z_3f13394d4b8632b9_dynamic_py.html  z_3f13394d4b8632b9_extension_py.html  z_3f13394d4b8632b9_static_py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_api_py.html  z_a44f0ac069e85531_test_extension_py.html
credits/: index.html
docs/: index.md
docs/.overrides/partials/: comments.html
docs/examples/: model_ext.py  model_noext.py
docs/insiders/: changelog.md  index.md  installation.md
docs/reference/: api.md  griffe_pydantic.md
examples/: model_ext.py  model_noext.py  model_noserialize.py  model_serialize.py
insiders/: goals.yml  index.html
insiders/changelog/: index.html
insiders/installation/: index.html
license/: index.html
reference/: SUMMARY.txt
reference/SUMMARY/: index.html
reference/api/: index.html  index.md
reference/griffe_pydantic/: index.html
reference/griffe_pydantic/common/: index.html
reference/griffe_pydantic/debug/: index.html
reference/griffe_pydantic/dynamic/: index.html
reference/griffe_pydantic/extension/: index.html
reference/griffe_pydantic/static/: index.html
scripts/: gen_credits.py
search/: search_index.json
src/griffe_pydantic/: __init__.py  common.py  debug.py  dynamic.py  extension.py  static.py
src/griffe_pydantic/_internal/: common.py  debug.py  dynamic.py  extension.py  static.py
src/griffe_pydantic/templates/material/: pydantic_attribute_alias.html.jinja  pydantic_field.html.jinja  pydantic_model.html.jinja
src/griffe_pydantic/templates/material/_base/: pydantic_attribute_alias.html.jinja  pydantic_field.html.jinja  pydantic_model.html.jinja
tests/: __init__.py  conftest.py  test_api.py  test_extension.py
